--- a/apps/art_store_web/lib/art_store_web/templates/layout/app.html.eex
+++ b/apps/art_store_web/lib/art_store_web/templates/layout/app.html.eex
@@ -4,28 +4,50 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title><%= assigns[:page_title] || "ArtStore · Phoenix Framework" %></title>
-    <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+    <title><%= assigns[:page_title] || "Guelor Emanuel" %></title>
+    <link rel="stylesheet" href='<%= Routes.static_path(@conn, "/css/app.css") %>'/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <%= csrf_meta_tag() %>
   </head>
-  <body>
+  <body data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0" data-gr-c-s-loaded="true">
     <header>
       <section class="container">
-        <nav role="navigation">
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-          </ul>
+        <nav class="main-nav" role="navigation">
+          <p>
+            <b>Guelor Emanuel</b>
+            <a href="<%= Routes.page_path(@conn, :index)%>">Art</a>
+            <%# <a>Store</a> %>
+            <%# <a>Blog</a> %>
+            <a href="<%= Routes.about_path(@conn, :index)%>">About</a>
+          </p>
         </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
       </section>
     </header>
-    <main role="main" class="container">
+    <main role="main">
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
       <%= render @view_module, @view_template, assigns %>
+      <div class="container">
+        <nav class="main-nav --footer" role="navigation">
+          <p>
+            <b>Guelor Emanuel</b>
+            <a href="<%= Routes.page_path(@conn, :index)%>">Art</a>
+            <%# <a>Store</a> %>
+            <%# <a>Blog</a> %>
+            <a href="<%= Routes.about_path(@conn, :index)%>">About</a>
+            <br>
+            <b>Elsewhere</b>
+            <a href="https://www.linkedin.com/in/gueloremanuel/">Linkedin</a>
+            <a href="https://www.instagram.com/_guelor/">Instagram</a>
+          </p>
+        </nav>
+      </div>
     </main>
-    <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src='<%= Routes.static_path(@conn, "/js/app.js") %>'></script>
+    <script> 
+      AOS.init();
+    </script>
   </body>
 </html>
