--- a/apps/art_store_web/lib/art_store_web/templates/layout/app.html.eex
+++ b/apps/art_store_web/lib/art_store_web/templates/layout/app.html.eex
@@ -7,6 +7,7 @@
     <title><%= assigns[:page_title] || "Guelor Emanuel" %></title>
     <link rel="stylesheet" href='<%= Routes.static_path(@conn, "/css/app.css") %>'/>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://js.stripe.com/v3/"></script>
     <%= csrf_meta_tag() %>
   </head>
   <body data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0" data-gr-c-s-loaded="true">
@@ -46,6 +47,7 @@
     </main>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <%= render_gon_script(@conn) %>
     <script type="text/javascript" src='<%= Routes.static_path(@conn, "/js/app.js") %>'></script>
     <script> 
       AOS.init();
