--- a/apps/art_store_web/lib/art_store_web/templates/product/form.html.eex
+++ b/apps/art_store_web/lib/art_store_web/templates/product/form.html.eex
@@ -1,9 +1,13 @@
-<%= form_for @changeset, @action, fn f -> %>
+<%= form_for @changeset, @action, [multipart: true], fn f -> %>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
   <% end %>
+
+  <%= label f, :url %>
+  <%= file_input f, :url, class: "control-label" %>
+  <%= error_tag f, :url %>
 
   <%= label f, :name %>
   <%= text_input f, :name %>
