Add new layout for chat message Added new layouts for chat system and also included session controller for handling login and signup request. I modified the router by separating the routes into different context.

--- a/apps/art_store_web/lib/art_store_web/templates/user/form.html.eex
+++ b/apps/art_store_web/lib/art_store_web/templates/user/form.html.eex
@@ -17,6 +17,20 @@
   <%= checkbox f, :verified %>
   <%= error_tag f, :verified %>
 
+  <div class="form-group">
+    <%= inputs_for f, :credential, fn cf -> %>
+      <%= label cf, :email %>
+      <%= text_input cf, :email %>
+      <%= error_tag cf, :email %>
+
+      <%= label cf, :password %>
+      <%= password_input cf, :password %>
+      <%= error_tag cf, :password %>
+
+
+    <% end %>
+  </div>
+
   <div>
     <%= submit "Save" %>
   </div>
