--- a/apps/art_store_web/lib/art_store_web/templates/user/show.html.eex
+++ b/apps/art_store_web/lib/art_store_web/templates/user/show.html.eex
@@ -17,6 +17,11 @@
     <%= @user.verified %>
   </li>
 
+  <li>
+    <strong>Email:</strong>
+    <%= @user.credential.email %>
+  </li>
+
 </ul>
 
 <span><%= link "Edit", to: Routes.user_path(@conn, :edit, @user) %></span>
