--- a/apps/art_store_web/lib/art_store_web/templates/session/index.html.eex
+++ b/apps/art_store_web/lib/art_store_web/templates/session/index.html.eex
@@ -37,7 +37,7 @@
         <p>Yes that's right, you thought it was the stuff of dreams, but even bananas can be bioengineered.</p>
       </div>
       <div class="six wide right floated column">
-        <img src="assets/images/wireframe/white-image.png" class="ui large bordered rounded image">
+        <img src="https://res.cloudinary.com/gueloremanuel-com/image/upload/v1584326042/aufbfadktohcnwyjls1t.jpg" class="ui large bordered rounded image">
       </div>
     </div>
     <div class="row">
