Add lookup table for chat role and add root role
Added lookup table for chat role and also limited sensitive endpoint to
only root users privilege

--- a/apps/art_store_web/lib/art_store_web/templates/session/confirm_verification.html.eex
+++ b/apps/art_store_web/lib/art_store_web/templates/session/confirm_verification.html.eex
@@ -9,7 +9,9 @@
         </h2>
         <div class="ui message">
           Enter it below to verify
-          <%= assigns[:user].credential.email %>
+          <%= if assigns[:user] do %>
+             <%= assigns[:user].credential.email %>
+          <% end %>
         </div>
         <%= form_for @conn, Routes.session_path(@conn, :verify_new_user), [method: :post, as: :user], fn f -> %>
           <div class="ui large form">
