Add LiveView for group chat and private chat
Implemented createChat and createGroupchat basic use case from chatter system requirement analysis, and fixed my website for my art work.

--- a/apps/art_store_web/lib/art_store_web/templates/chat/form.html.eex
+++ b/apps/art_store_web/lib/art_store_web/templates/chat/form.html.eex
@@ -8,8 +8,15 @@
   <%= label f, :subject %>
   <%= text_input f, :subject %>
   <%= error_tag f, :subject %>
+  <%= array_input f, :emails %>
+  <%= error_tag f, :emails %>
+  <%= array_add_button f, :emails %>
+
 
   <div>
-    <%= submit "Save" %>
+    <%= submit "Create" %>
   </div>
 <% end %>
+
+
+
