--- a/apps/art_store_web/lib/art_store_web/templates/layout/chatter.html.eex
+++ b/apps/art_store_web/lib/art_store_web/templates/layout/chatter.html.eex
@@ -4,9 +4,25 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <%= csrf_meta_tag() %>
     <title>Chatter</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <style type="text/css">
+    .input_container input.form-control {
+      display: inline-block; 
+      margin: 5px 5px 0 0;
+      width: 50%;
+    }
+      .input-tags {
+        width: 100%;
+        padding: 15px;
+        display: block;
+        margin: 0 auto;
+      }
+      .label-info {
+        background-color: #5bc0de;
+        padding: 3px;
+      }
       .hidden.menu {
         display: none;
       }
@@ -103,7 +119,31 @@
       .column {
         max-width: 450px;
       }
+    /*
+      Chatter
+    */
+
+    .messages {
+      height: 350px;
+      overflow: scroll;
+    }
+
+    .chatroom {
+      width: 900px;
+    }
+
+    .chat-content {
+      display: inline-block;
+      width: 600px;
+    }
+
+    .members {
+      display: inline-block;
+      float: right;
+      width: 200px;
+    }
   </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
       $(document)
         .ready(function() {
@@ -135,10 +175,10 @@
       <%= render @view_module, @view_template, assigns %>
     </div>
   </body>
-  <script type="text/javascript" src='<%= Routes.static_path(@conn, "/js/app.js") %>'></script>
   <script
   src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
   integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
   crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+  <script type="text/javascript" src='<%= Routes.static_path(@conn, "/js/app.js") %>'></script>
 </html>
