--- a/apps/art_store_web/lib/art_store_web/templates/product/show.html.leex
+++ b/apps/art_store_web/lib/art_store_web/templates/product/show.html.leex
@@ -29,6 +29,7 @@
                         phx-value-myvar3="<%= @product.url %>"
                         phx-value-myvar4="<%= @product.price %>"
                         phx-value-myvar5="<%= @product.id %>"
+                        phx-value-myvar6="<%= @product.quantity %>"
                         size="4" max="<%= @product.quantity %>" 
                         min="1" 
                         value="<%= @quantity %>" type="number" step="1"> 
