--- a/apps/art_store_web/lib/art_store_web/templates/chat/new.html.eex
+++ b/apps/art_store_web/lib/art_store_web/templates/chat/new.html.eex
@@ -1,5 +1,22 @@
-<h1>New Chat</h1>
+<div class="ui inverted vertical masthead center aligned segment">
 
-<%= render "form.html", Map.put(assigns, :action, Routes.chat_path(@conn, :create)) %>
+  <div class="ui container">
+    <div class="ui large secondary inverted pointing menu">
+      <a class="toc item">
+        <i class="sidebar icon"></i>
+      </a>
+      <a class="item" href="<%= Routes.chat_path(@conn, :index)%>">Chats</a>
+      <a class="active item">New Chat</a>
+      <div class="right item">
+        <%= form_for @conn, Routes.session_path(@conn, :delete), [method: :delete, as: :user], fn _ -> %>
+          <%= submit "logout", class: "ui inverted button" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 
-<span><%= link "Back", to: Routes.chat_path(@conn, :index) %></span>
+  <div class="ui text container">
+    <h1>New Chat</h1>
+    <%= render "form.html", Map.put(assigns, :action, Routes.chat_path(@conn, :create)) %>
+  </div>
+</div>
