--- a/apps/art_store_web/lib/art_store_web/templates/session/signup.html.eex
+++ b/apps/art_store_web/lib/art_store_web/templates/session/signup.html.eex
@@ -24,7 +24,6 @@
         <%= form_for @changeset, Routes.session_path(@conn, :register_new_user), [method: :post, as: :user], fn f -> %>
           <div class="ui large form">
             <div class="ui stacked segment">
-              
               <div class="field">
                 <div class="ui left icon">
                   <%= input f, :username %>
@@ -32,7 +31,12 @@
               </div>
               <div class="field">
                 <div class="ui left icon">
-                  <%= input f, :name %>
+                  <%= input f, :first_name %>
+                </div>
+              </div>
+              <div class="field">
+                <div class="ui left icon">
+                  <%= input f, :last_name %>
                 </div>
               </div>
               <%= inputs_for f, :credential, fn cf -> %>
