--- a/apps/art_store_web/lib/art_store_web/templates/session/index.html.eex
+++ b/apps/art_store_web/lib/art_store_web/templates/session/index.html.eex
@@ -109,7 +109,7 @@
         </div>
       </div>
       <div class="seven wide column">
-        <h4 class="ui inverted header">Intersted in Art?</h4>
+        <h4 class="ui inverted header">Interested in Art?</h4>
         <p>Check out my artwork at <a href="http://www.gueloremanuel.com/">gueloremanuel.com</a></p>
       </div>
     </div>
