--- a/apps/art_store_web/lib/art_store_web/templates/chat/index.html.eex
+++ b/apps/art_store_web/lib/art_store_web/templates/chat/index.html.eex
@@ -1,5 +1,6 @@
 <div class="ui inverted vertical masthead center aligned segment">
-
+  <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+  <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
   <div class="ui container">
     <div class="ui large secondary inverted pointing menu">
       <a class="toc item">
@@ -7,7 +8,7 @@
       </a>
       <a class="active item">Chats</a>
       <a class="item" href="<%= Routes.chat_path(@conn, :new)%>">New Chat</a>
-      <div class="right item">
+      <div class="right item aligned divided">
         <%= form_for @conn, Routes.session_path(@conn, :delete), [method: :delete, as: :user], fn _ -> %>
           <%= submit "logout", class: "ui inverted button" %>
         <% end %>
@@ -22,6 +23,14 @@
             <div class="ui button inverted"><%= link "Show", to: Routes.chat_path(@conn, :show, chat) %></div>
             <%= if chat.is_group_chat do %>
               <div class="ui button inverted"><%= link "Leave", to: Routes.chat_path(@conn, :delete, chat), method: :delete, data: [confirm: "Are you sure?"] %></div>
+              <div class="ui action input">
+                <%= form_for @conn, Routes.chat_path(@conn, :add_user_to_chat), fn f -> %>
+                  <%= text_input f, :email,  class: "text", placeholder: "Invite a friend to this chat..." %>
+                  <%= hidden_input :chat, :chat_id, value: chat.id  %>
+                  <%= hidden_input :user, :name, value: @current_user.name  %>
+                  <%= submit "Add", class: "ui button inverted" %>
+                <% end %>
+              </div>
             <% end %>
           </div>
           <img class="ui avatar image" src="https://picsum.photos/seed/picsum/200/300">
