--- a/apps/art_store_web/lib/art_store_web/templates/chat/show.html.leex
+++ b/apps/art_store_web/lib/art_store_web/templates/chat/show.html.leex
@@ -6,10 +6,14 @@
         <i class="sidebar icon"></i>
       </a>
       <a class="item" href="<%= Routes.chat_path(@socket, :index)%>"><- Back</a>
+      <%= if is_chat_role_name_Admin?(@chat.chat_role, @current_user) do %>
+       <%= render "chat_form.html", chat: @chat, current_user: @current_user %>
+      <% end %>
     </div>
   </div>
-
-  <div class="ui text container">  
+  <div class="ui text container">
+    <p><%= live_flash(@flash, :notice) %></p>
+    <p><%= live_flash(@flash, :error) %></p>  
     <div class="chatroom">
       <div class="chat-content">
         <div class="list-group">
@@ -23,7 +27,7 @@
           </div>
           <div class="list-group-item  messages">
             <ul>
-              <%=for message <- @chat.message do %>
+              <%=for message <- filter_messages_by_joined_date(@chat.participant, @current_user, @chat.message, @chat.is_group_chat) do %>
               <p> 
                 <strong style="color: <%= username_color(message.user, @username_colors) %>">
                 <%= message.user.name %>: </strong><%= message.content %>
