--- a/apps/art_store_web/lib/art_store_web/templates/chat/chat_form.html.eex
+++ b/apps/art_store_web/lib/art_store_web/templates/chat/chat_form.html.eex
@@ -1,7 +1,7 @@
 <div class="right item">
   <form phx-change="user_selected">
     <select name="user" id="user_selected"class="ui search dropdown">
-      <option value="">Pass chat ownership</option>
+      <option value="">Transfer chat ownership</option>
       <%= for p <- filter_participant(@chat.participant, @current_user) do %>
         <option value="<%= [p.user.id, @chat.id, @current_user.id] %>">
           <%= p.user.name %>
