--- a/apps/art_store_web/lib/art_store_web/templates/chat/form.html.eex
+++ b/apps/art_store_web/lib/art_store_web/templates/chat/form.html.eex
@@ -6,9 +6,9 @@
   <% end %>
 
   <%= label f, :subject %>
-  <%= text_input f, :subject %>
+  <%= text_input f, :subject, placeholder: "Chat name"%>
   <%= error_tag f, :subject %>
-  <%= array_input f, :emails %>
+  <%= array_input f, :emails%>
   <%= error_tag f, :emails %>
   <%= array_add_button f, :emails %>
 
