--- a/apps/art_store_web/lib/art_store_web/templates/chat/show.html.leex
+++ b/apps/art_store_web/lib/art_store_web/templates/chat/show.html.leex
@@ -20,8 +20,7 @@
           <div class="list-group-item active">
             <%= if @chat.is_group_chat do %>
               <div class="header"><%= @chat.subject %></div>
-            <% end %>
-            <%= if not @chat.is_group_chat do %>
+            <% else %>
               <div class="header"><%= get_participant_name(@chat.participant, @current_user) %></div>
             <% end %>
           </div>
